[gd_scene load_steps=4 format=3 uid="uid://bpodu035v3lq4"]

[ext_resource type="Script" uid="uid://ckpnrpqqdgl88" path="res://UI/ui.gd" id="1_6dd3c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pa3ot"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6dd3c"]
bg_color = Color(1, 1, 1, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_6dd3c")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(100, 100)
offset_left = 1102.0
offset_right = 1152.0
offset_bottom = 50.0
grow_horizontal = 0

[node name="Panel" type="Panel" parent="Panel"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -12.5
offset_right = 12.5
offset_bottom = 25.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pa3ot")

[node name="Panel2" type="Panel" parent="Panel"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -12.5
offset_right = 25.0
offset_bottom = 12.5
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pa3ot")

[node name="Panel3" type="Panel" parent="Panel"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -12.5
offset_top = -25.0
offset_right = 12.5
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_pa3ot")

[node name="Panel4" type="Panel" parent="Panel"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -12.5
offset_bottom = 12.5
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pa3ot")

[node name="ScreenOverlay" type="Panel" parent="."]
modulate = Color(0, 0, 0, 0)
offset_right = 1152.0
offset_bottom = 704.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6dd3c")
